--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -33,6 +33,14 @@
                 android:layout_marginTop="10dp"
                 android:text="LV "
                 android:textSize="15dp" />
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:fontFamily="@font/maplestorybold"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:text="Exp"
+                android:textSize="15dp" />
 
             <TextView
                 android:layout_width="70dp"
@@ -59,7 +67,7 @@
                 android:fontFamily="@font/maplestorybold"
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
+
                 android:text="Attack"
                 android:textSize="15dp" />
             <TextView
@@ -92,10 +100,19 @@
                     android:layout_height="30dp"
                     android:fontFamily="@font/maplestorybold"
                     android:textAlignment="center"
-                    android:text="3 "
+                    android:text="- "
                     android:textSize="15dp"
                     android:layout_marginTop="10dp"
                     android:gravity="center_horizontal" />
+                <TextView
+                    android:id="@+id/mypage_expTv"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:fontFamily="@font/maplestorybold"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:text="-"
+                    android:textSize="15dp" />
                 <TextView
                     android:id="@+id/mypage_pointTv"
                     android:layout_width="100dp"
@@ -103,7 +120,7 @@
                     android:fontFamily="@font/maplestorybold"
                     android:layout_gravity="center_horizontal"
                     android:textAlignment="center"
-                    android:text="10000"
+                    android:text="-"
                     android:textSize="15dp" />
                 <TextView
                     android:id="@+id/mypage_stageTv"
@@ -112,7 +129,7 @@
                     android:fontFamily="@font/maplestorybold"
                     android:layout_gravity="center_horizontal"
                     android:textAlignment="center"
-                    android:text="17"
+                    android:text="-"
                     android:textSize="15dp" />
 
 
@@ -123,8 +140,7 @@
                 android:fontFamily="@font/maplestorybold"
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp"
-                android:text="20"
+                android:text="-"
                 android:textSize="15dp" />
             <TextView
                 android:id="@+id/mypage_dfdTv"
@@ -133,7 +149,7 @@
                 android:fontFamily="@font/maplestorybold"
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
-                android:text="10"
+                android:text="-"
                 android:textSize="15dp" />
 
             <TextView
@@ -143,7 +159,7 @@
                 android:fontFamily="@font/maplestorybold"
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
-                android:text="Time+0.5"
+                android:text="-"
                 android:textSize="15dp" />
 
 
@@ -264,7 +280,7 @@
                     android:background="@drawable/buttonshapecircle"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_baseline_star_24"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <ImageButton
                     android:id="@+id/medal2"
@@ -275,7 +291,7 @@
                     android:background="@drawable/buttonshapecircle"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_baseline_local_fire_department_24"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
 
                 <ImageButton
                     android:id="@+id/medal3"
@@ -286,7 +302,7 @@
                     android:background="@drawable/buttonshapecircle"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_baseline_heart_24"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
 
                 <ImageButton
                     android:id="@+id/medal4"
@@ -297,7 +313,7 @@
                     android:background="@drawable/buttonshapecircle"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_baseline_toys_24"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
 
                 <ImageButton
                     android:id="@+id/medal5"
@@ -308,8 +324,62 @@
                     android:background="@drawable/buttonshapecircle"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_baseline_music_note_24"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
 
+                <ImageButton
+                    android:id="@+id/space1"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
+                <ImageButton
+                    android:id="@+id/space2"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
+                <ImageButton
+                    android:id="@+id/space3"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
+                <ImageButton
+                    android:id="@+id/space4"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
+                <ImageButton
+                    android:id="@+id/space5"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
+                <ImageButton
+                    android:id="@+id/space6"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/buttonshapecircle"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
